--- a/.github/workflows/main_MichaelDevBookLanding.yml
+++ b/.github/workflows/main_MichaelDevBookLanding.yml
@@ -19,7 +19,13 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.8'
-
+        
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if { -f requirements.txt }; then pip install -r requirements.txt; fi
+      
     - name: Build using AppService-Build
       uses: azure/appservice-build@v2
       with:
