--- a/.github/workflows/main_MichaelDevBookLanding.yml
+++ b/.github/workflows/main_MichaelDevBookLanding.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if { -f requirements.txt }; then pip install -r requirements.txt;
+        pip install flake8 pytest names
       
     - name: Build using AppService-Build
       uses: azure/appservice-build@v2
