--- a/.github/workflows/main_MichaelDevBookLanding.yml
+++ b/.github/workflows/main_MichaelDevBookLanding.yml
@@ -22,11 +22,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest names pylint
-        
-    - name: Analysing the code with pylint
-      run: |
-        pylint `ls -R|grep .py$|xargs`
+        pip install flake8 pytest names pylint flask
         
     - name: Lint with flake8
       run: |
